[gd_scene load_steps=22 format=3 uid="uid://dawi8sppkthck"]

[ext_resource type="Script" uid="uid://dmc88mf4o0qp3" path="res://scripts/components/ui_controller.gd" id="1_03y04"]
[ext_resource type="Script" uid="uid://dqcp7anvrr2a5" path="res://addons/godot_extension_core_gdscript/Generated/Input/local_input_poll_component.gd" id="1_q631a"]
[ext_resource type="Script" uid="uid://c0674h4ynhvmk" path="res://addons/godot_extension_core_gdscript/Generated/Input/iinput_polling_resource.gd" id="2_tfsc7"]
[ext_resource type="Resource" uid="uid://bh7fq0jhn3db5" path="res://resources/controls/controller_poll.tres" id="3_gudjc"]
[ext_resource type="Resource" uid="uid://b7heq3x6sqytr" path="res://resources/controls/mkb_poll.tres" id="4_7j21i"]
[ext_resource type="Script" uid="uid://cms5oajqm81q0" path="res://scripts/components/ship_movement.gd" id="5_gudjc"]
[ext_resource type="ArrayMesh" uid="uid://dcsssn342eoeb" path="res://Assets/meshs/boat/Sail_Cube_001.res" id="6_itrim"]
[ext_resource type="ArrayMesh" uid="uid://c3qy52vxjdbmd" path="res://Assets/meshs/boat/Sail_Cube_002.res" id="7_bseor"]
[ext_resource type="ArrayMesh" uid="uid://bysdgemp6tao0" path="res://Assets/meshs/boat/Sail_Cube_004.res" id="8_tlr80"]
[ext_resource type="ArrayMesh" uid="uid://b5gkgr0ghx6a4" path="res://Assets/meshs/boat/Sail_Sphere.res" id="9_03y04"]
[ext_resource type="Script" uid="uid://cjax4gx8usajn" path="res://scripts/components/crew_cabin.gd" id="9_48mkp"]
[ext_resource type="Script" uid="uid://vpefl0oijica" path="res://scripts/components/water_storage.gd" id="10_bseor"]
[ext_resource type="Script" uid="uid://02hrgmpa5msp" path="res://scripts/crew_member.gd" id="10_mx31c"]
[ext_resource type="Resource" uid="uid://c31gecwnnajnb" path="res://resources/crew_members/sailor_william.tres" id="11_fs4we"]
[ext_resource type="Script" uid="uid://dq4fcyjmvce0i" path="res://scripts/components/water_storage_interacor.gd" id="11_tlr80"]
[ext_resource type="Resource" uid="uid://bdbalsk1v1fqv" path="res://resources/crew_members/mechanic_chucky.tres" id="12_dschd"]
[ext_resource type="Resource" uid="uid://q4yc2ewcdqth" path="res://resources/crew_members/cook_walrus.tres" id="13_83dbu"]
[ext_resource type="Resource" uid="uid://cmlk7gf1kj8u4" path="res://resources/crew_members/navigator_kevin.tres" id="14_xifwb"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gudjc"]
rough = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2gnfn"]
radius = 2.00427
height = 9.99799

[sub_resource type="SphereShape3D" id="SphereShape3D_tlr80"]
radius = 8.0

[node name="Ship" type="RigidBody3D" groups=["Player"]]
axis_lock_angular_x = true
axis_lock_angular_z = true
mass = 6000.0
physics_material_override = SubResource("PhysicsMaterial_gudjc")
max_contacts_reported = 10

[node name="UIController" type="Node" parent="."]
process_mode = 3
script = ExtResource("1_03y04")
metadata/_custom_type_script = "uid://dmc88mf4o0qp3"

[node name="WaterStorageInteractor" type="Node" parent="." node_paths=PackedStringArray("interaction_range_area")]
script = ExtResource("11_tlr80")
interaction_range_area = NodePath("../InteractionRange")
metadata/_custom_type_script = "uid://dq4fcyjmvce0i"

[node name="WaterStorage" type="Node" parent="."]
script = ExtResource("10_bseor")
water_capacity = 6400
current_water = 3200
metadata/_custom_type_script = "uid://vpefl0oijica"

[node name="LocalInputPollComponent" type="Node" parent="."]
script = ExtResource("1_q631a")
_input_pollers = Array[ExtResource("2_tfsc7")]([ExtResource("3_gudjc"), ExtResource("4_7j21i")])
metadata/_custom_type_script = "uid://dqcp7anvrr2a5"

[node name="ShipMovement" type="Node" parent="."]
script = ExtResource("5_gudjc")
acceleration = 50.0
metadata/_custom_type_script = "uid://cms5oajqm81q0"

[node name="CrewCabin" type="Node" parent="."]
script = ExtResource("9_48mkp")
crew_members = Array[ExtResource("10_mx31c")]([ExtResource("11_fs4we"), ExtResource("12_dschd"), ExtResource("13_83dbu"), ExtResource("14_xifwb")])
metadata/_custom_type_script = "uid://cjax4gx8usajn"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.24313, 0)
shape = SubResource("CapsuleShape3D_2gnfn")

[node name="ShipModel" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="Base" type="MeshInstance3D" parent="ShipModel"]
mesh = ExtResource("6_itrim")

[node name="Oar" type="MeshInstance3D" parent="ShipModel"]
mesh = ExtResource("7_bseor")

[node name="SideThing" type="MeshInstance3D" parent="ShipModel"]
mesh = ExtResource("8_tlr80")

[node name="Sail" type="MeshInstance3D" parent="ShipModel"]
mesh = ExtResource("9_03y04")

[node name="InteractionRange" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionRange"]
shape = SubResource("SphereShape3D_tlr80")
